--- a/Client/FunnySongs/src/index.css
+++ b/Client/FunnySongs/src/index.css
@@ -1,15 +1,31 @@
-html{
-  width: 100w;
-  height: 100vh;
+*{
+  padding: 0;
+  margin: 0;
+  transition: all 0.5s ease-in-out;
 }
 
-body{
-  width: 100w;
-  height: 100vh;
-  background-image: url(./assets/Edited.jpg);
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://i.pinimg.com/564x/c2/33/be/c233beb8cb374f65b6b09f3be0e6ef13.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.bg-dark-blue{
-  background-color: rgb(0, 0, 0,0.8);
-  box-shadow: 0 4px 8px rgb(255, 255, 255);
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(48, 178, 100);
 }
