--- a/Client/FunnySongs/src/Components/MainComponent/MainComponent.css
+++ b/Client/FunnySongs/src/Components/MainComponent/MainComponent.css
@@ -6,7 +6,7 @@
     grid-auto-rows: auto;
     gap: 80px;
     margin: 50px; 
-    padding: 20px; 
+    padding: 50px; 
     justify-content: center;
     color: white;
     font-family: "Kumbh Sans", sans-serif;
@@ -18,7 +18,15 @@
     padding: 20px; 
     text-align: center;
     border-radius: 12px;
-    width: 400px; 
+    width: 450px; 
+    height: 450px;
+  }
+  
+  iframe{
+    border-radius: 12px;
+    width: 100%;
+    height: 250px;
+    margin-top: 30px;
   }
 
   iframe:hover{
@@ -26,10 +34,29 @@
     height: 300px;
     transform: scale(1.2);
   }
+
   
   .iframe-container:nth-child(even) {
     color: black;
     background-color: rgb(129, 129, 129);
   }
   
-  
+  @media only screen and (max-width: 426px) {
+    .main-container{
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+      grid-auto-rows: auto;
+      gap: 30px;
+      line-height: 30px;
+    }
+
+    .iframe-container {
+      background-color: rgb(44, 44, 44);
+      padding: 20px; 
+      text-align: center;
+      border-radius: 12px;
+      width: 320px; 
+      height: 350px;
+    }
+
+  }
