--- a/Client/FunnySongs/src/Components/NavbarComponent/NavBar.css
+++ b/Client/FunnySongs/src/Components/NavbarComponent/NavBar.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');
 
+
 .MuiAppBar-root {
     height: 70px;
 }
 
 .MuiToolbar-root {
-    height: 70px; 
+    height: 150px; 
 }
 
 .MuiTypography-h6 {
@@ -26,4 +27,13 @@
         height: 20px; 
         width: 20px; 
     }
+}
+
+
+@media only screen and (max-width: 426px) {
+    .MuiToolbar-root {
+        height: 80px; 
+        width: 100pvw;
+    }
+
 }
