--- a/Client/FunnySongs/src/Components/HomeComponent/Home.css
+++ b/Client/FunnySongs/src/Components/HomeComponent/Home.css
@@ -1,49 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@0,1..1000;1,1..1000&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /* Ensure padding and border are included in element's total width and height */
-}
-
-.Landing-Container {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-    padding: 20px;
-    font-family: "Sofia Sans Condensed", sans-serif;
-}
-
-.landing-logo {
-    width: 100%; /* Make sure the image fills its container */
-    max-width: 400px; /* Limit the maximum width of the image */
-    height: auto; /* Ensure the image maintains its aspect ratio */
-}
-
-.Landing-Content {
-    width: 100%;
-    max-width: 600px; /* Limit the maximum width of the content */
-    margin-top: 20px; /* Add some space between the logo and content */
-    text-align: center; /* Center-align the content */
-}
-
-.Landing-Content > h2 {
-    font-size: 1.2rem; /* Adjust font size for smaller screens */
-    line-height: 1.5; /* Increase line height for better readability */
-}
-
-.Landing-Content > div {
-    margin-top: 20px; /* Add some space between the paragraph and button */
-}
-
-.Landing-Content > div > a {
-    text-decoration: none; /* Remove underline from link */
-}
-
-
-@media only screen and (max-width: 426px) {
-    .landing-image>img{
-        margin-top:30px;
-        width: 200px;
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        /* overflow-x: hidden; */
     }
-}
+
+    .Landing-Container {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        /* height: 482px; */
+        /* flex-direction: column;  */
+        align-items: center;
+        padding: 20px;
+        font-family: "Sofia Sans Condensed", sans-serif;
+    }
+
+    .landing-logo {
+        width: 100%; /* Make sure the image fills its container */
+        max-width: 400px; /* Limit the maximum width of the image */
+        height: auto; /* Ensure the image maintains its aspect ratio */
+    }
+
+    .Landing-Content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        height: 600px;
+        max-width: 600px; /* Limit the maximum width of the content */
+        /* margin-top: 20px;  */
+        text-align: center; /* Center-align the content */
+    }
+
+    .Landing-Content > h2 {
+        font-size: 1.6rem; /* Adjust font size for smaller screens */
+        font-weight: 600;
+        line-height: 1.8; /* Increase line height for better readability */
+    }
+
+
+    .Landing-Content > div > a {
+        text-decoration: none; /* Remove underline from link */
+    }
+
+
+    @media only screen and (max-width: 426px) {
+
+
+
+        .Landing-Container{
+            flex-direction: column;
+            height: 100vh;
+        }
+        .landing-image>img{
+            margin-top:30px;
+            width: 180px;
+        }
+
+        .Landing-Content > h2 {
+            font-size: 1.3rem; /* Adjust font size for smaller screens */
+            font-weight: 600;
+            line-height: 1.7; 
+            margin-bottom: 10px;
+        }
+
+    }
