--- a/Client/FunnySongs/src/Components/MainComponent/MainComponent.css
+++ b/Client/FunnySongs/src/Components/MainComponent/MainComponent.css
@@ -15,17 +15,29 @@
   
   .iframe-container {
     background-color: rgb(44, 44, 44);
-    padding: 20px; 
+    padding: 25px; 
     text-align: center;
     border-radius: 12px;
     width: 450px; 
-    height: 450px;
+    height: 500px;
+  }
+
+  .iframe-container>button{
+    margin-top: 15px;
+    background:none;
+    border: none;
+    color: white;
+  }
+
+  .iframe-container>button:hover{
+    cursor: pointer;
+    transform: scale(1.5);
   }
   
   iframe{
     border-radius: 12px;
     width: 100%;
-    height: 250px;
+    height: 200px;
     margin-top: 30px;
   }
 
