Fixing Errors in Routes

--- a/Client/FunnySongs/src/Components/MainComponent/MainComponent.css
+++ b/Client/FunnySongs/src/Components/MainComponent/MainComponent.css
@@ -19,17 +19,27 @@
     text-align: center;
     border-radius: 12px;
     width: 450px; 
-    height: 500px;
+    height: 520px;
   }
 
-  .iframe-container>button{
-    margin-top: 15px;
+  .edit-delete{
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .edit-delete>button{
+    margin-top: 10px;
     background:none;
     border: none;
-    color: white;
+    color: white;   
   }
 
-  .iframe-container>button:hover{
+  .edit-delete>button>svg{
+    font-size:35px;
+  }
+
+  .edit-delete>button:hover{
     cursor: pointer;
     transform: scale(1.5);
   }
@@ -41,13 +51,14 @@
     margin-top: 30px;
   }
 
+
+
+
   iframe:hover{
     width: 300px;
     height: 300px;
     transform: scale(1.2);
   }
-
-  
   .iframe-container:nth-child(even) {
     color: black;
     background-color: rgb(129, 129, 129);
@@ -68,7 +79,7 @@
       text-align: center;
       border-radius: 12px;
       width: 320px; 
-      height: 350px;
+      height: 400px;
     }
 
   }
