--- a/Client/FunnySongs/src/Components/HomeComponent/Home.css
+++ b/Client/FunnySongs/src/Components/HomeComponent/Home.css
@@ -29,24 +29,21 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-
         height: 600px;
-        max-width: 600px; /* Limit the maximum width of the content */
-        /* margin-top: 20px;  */
-        text-align: center; /* Center-align the content */
+        max-width: 600px;
+        text-align: center; 
     }
 
     .Landing-Content > h2 {
-        font-size: 1.6rem; /* Adjust font size for smaller screens */
+        font-size: 1.6rem; 
         font-weight: 600;
-        line-height: 1.8; /* Increase line height for better readability */
+        line-height: 1.8; 
     }
 
 
     .Landing-Content > div > a {
-        text-decoration: none; /* Remove underline from link */
+        text-decoration: none; 
     }
-
 
     @media only screen and (max-width: 426px) {
 
@@ -56,16 +53,29 @@
             flex-direction: column;
             height: 100vh;
         }
+        
         .landing-image>img{
-            margin-top:30px;
-            width: 180px;
+            margin-top:0px;
+            margin-bottom: 0px;
+            width: 160px;
+        }
+
+        .Landing-Content {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            height: 600px;
+            max-width: 600px;
+            text-align: center; 
         }
 
         .Landing-Content > h2 {
-            font-size: 1.3rem; /* Adjust font size for smaller screens */
+            font-size: 1.2rem; 
             font-weight: 600;
-            line-height: 1.7; 
-            margin-bottom: 10px;
+            line-height: 1.4; 
+            margin-bottom: 0px;
         }
+
 
     }
